--- a/src/assets/scss/pages/_articles.scss
+++ b/src/assets/scss/pages/_articles.scss
@@ -62,7 +62,7 @@
             }
         }
     }
-    .hed {
+    .headline {
         font-family: 'bebas_neuebold';
         font-size: 5rem;
         line-height: 1;
